# reMark

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  config.example.yaml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  release.yml  screenshots.yml
contrib/obsidian-plugin/: COMMUNITY_STORE.md  README.md  esbuild.config.mjs  main.ts  manifest.json  package.json
docs/: BRIDGE_API.md  OLLAMA.md  TEMPLATES.md  plugins.md  upgrading.md
examples/plugins/: README.md  math_latex_plugin.py
scripts/: screenshots.py  seed_demo_data.py  setup_auth.py  test_connection.py
src/: config.py  http_pool.py  log_setup.py  main.py
src/integrations/microsoft/: auth.py  calendar.py  graph.py  onenote.py  service.py  teams.py  todo.py
src/integrations/notion/: __init__.py  client.py  service.py
src/llm/: __init__.py  anthropic.py  client.py  factory.py  ollama.py
src/mcp/: server.py
src/obsidian/: frontmatter.py  git_sync.py  templates.py  vault.py
src/ocr/: google_vision.py  pipeline.py  remarkable_builtin.py  renderer.py  vlm.py
src/plugins/: hooks.py  registry.py
src/plugins/examples/: at_mention_extractor.py
src/processing/: actions.py  structurer.py  summarizer.py  tagger.py  usage.py
src/remarkable/: auth.py  cloud.py  documents.py  formats.py  streaming.py  websocket.py
src/reports/: __init__.py  runner.py  scheduler.py
src/response/: generator.py  notebook_writer.py  pdf_generator.py  uploader.py
src/search/: backends.py  chunker.py  index.py  indexer.py  query.py
src/sync/: engine.py  reverse_sync.py  scheduler.py  state.py  watcher.py
src/templates/: engine.py
src/templates/builtin/: daily.yaml  meeting.yaml  project-review.yaml
src/web/: api_notes.py  api_search.py  app.py  auth.py  config_writer.py  demo.py  push.py  settings_forms.py
src/web/static/: app.js  service-worker.js
src/web/templates/: actions.html  ask.html  audit.html  base.html  dashboard.html  devices.html  login.html  note_view.html  notes.html  queue.html  quick_entry.html  reports.html  settings.html  settings_section.html  templates_edit.html  templates_index.html  users.html
systemd/: remark-bridge-sync.service  remark-bridge-sync.timer  remark-bridge-web.service  remarkable-bridge.service  remarkable-bridge.timer
tests/: test_api_notes.py  test_api_search.py  test_audit.py  test_auth.py  test_batch_embeddings.py  test_bench.py  test_bridge_api.py  test_formats.py  test_foundation.py  test_http_pool.py  test_http_pool_integration.py  test_llm_anthropic.py  test_llm_client.py  test_llm_config.py  test_llm_factory.py  test_llm_ollama.py  test_math_latex_plugin.py  test_microsoft.py  test_multi_device.py  test_multi_user.py  test_notion.py  test_ocr.py  test_ocr_pipeline_ollama.py  test_ollama_embeddings.py  test_ollama_vlm_ocr.py  test_onenote.py  test_plugins.py  test_processing.py  test_reports.py  test_response.py  test_response_flow.py  test_reverse_sync.py  test_search.py  test_search_hybrid.py  test_security_regressions.py  test_settings_llm.py  test_settings_write.py  test_streaming_download.py  test_sync.py  test_sync_queue.py  (+5 more)
tests/fixtures/: test-page-001.rm
vault_template/Templates/: action-item.md  remarkable-note.md
