[project]
name = "remark-bridge"
version = "0.1.0"
description = "Bidirectional sync between reMarkable tablets and an Obsidian knowledge base with intelligent note processing"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
    { name = "BGGBTAC" },
]
keywords = ["remarkable", "obsidian", "handwriting", "ocr", "sync"]

[project.urls]
Homepage = "https://github.com/BGGBTAC/reMark"
Repository = "https://github.com/BGGBTAC/reMark"
Issues = "https://github.com/BGGBTAC/reMark/issues"
Changelog = "https://github.com/BGGBTAC/reMark/releases"

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Groupware",
]

dependencies = [
    "rmscene>=0.5",
    "httpx>=0.27",
    "websockets>=12.0",
    "pyyaml>=6.0",
    "anthropic>=0.40",
    "google-cloud-vision>=3.5",
    "reportlab>=4.0",
    "cairosvg>=2.7",
    "gitpython>=3.1",
    "click>=8.1",
    "pydantic>=2.5",
    "mcp>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "ruff>=0.5",
]

[project.scripts]
remark-bridge = "src.main:cli"

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["src*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: marks tests that hit external APIs (deselect with '-m \"not integration\"')",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["E501"]
