[project]
name = "remark-bridge"
version = "0.4.0"
description = "Bidirectional sync between reMarkable tablets and an Obsidian knowledge base with intelligent note processing"
readme = "README.md"
license = "CC-BY-NC-4.0"
license-files = ["LICENSE"]
requires-python = ">=3.11"
authors = [
    { name = "BGGBTAC" },
]
keywords = ["remarkable", "obsidian", "handwriting", "ocr", "sync"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Groupware",
]

dependencies = [
    "rmscene>=0.5",
    "httpx>=0.27",
    "websockets>=13.0",
    "pyyaml>=6.0",
    "anthropic>=0.49",
    "google-cloud-vision>=3.7",
    "reportlab>=4.2",
    "cairosvg>=2.7",
    "gitpython>=3.1.43",
    "click>=8.1",
    "pydantic>=2.7",
    "mcp>=1.2",
    "sqlite-vec>=0.1.5",
    "numpy>=1.26",
    "msal>=1.30",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "jinja2>=3.1",
    "pywebpush>=2.0.3",
    "ruamel.yaml>=0.18",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "ruff>=0.5",
]
voyage = ["voyageai>=0.2.0"]
openai = ["openai>=1.40"]
local-embeddings = ["sentence-transformers>=3.0"]

[project.scripts]
remark-bridge = "src.main:cli"

[project.urls]
Homepage = "https://github.com/BGGBTAC/reMark"
Repository = "https://github.com/BGGBTAC/reMark"
Issues = "https://github.com/BGGBTAC/reMark/issues"
Changelog = "https://github.com/BGGBTAC/reMark/releases"

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["src*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: marks tests that hit external APIs (deselect with '-m \"not integration\"')",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["E501"]
"src/web/app.py" = ["B008"]  # FastAPI uses Depends() in defaults by design
